cria documentacao do controller auth
